이제중증도3-4만하면댐

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.application.name=mini7
 server.port=${PORT:8080}
-hospital.api.host=http://127.0.0.1:8000
-
-
-# SQLite 
+hospital.api.host=http://localhost:8000
+naver.api.client-id=3bnisjgacm
+naver.api.client-secret=WQTR2NpEvJJJfe5DN3fHml3im70xJNs2D2ZsKgeW
+# SQLite
 spring.datasource.url=jdbc:sqlite:./src/main/resources/database/em.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
-
-
 # JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
